[package]
name = "unnamed"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "unnamed"
path = "src/main.rs"

[dependencies]
winit = "0.30"
softbuffer = "0.4"
image = { version = "0.25", default-features = false, features = ["png"] }
rodio = { version = "0.17", default-features = false, features = ["symphonia-mp3"] }
